# SPECT

./: .gitignore  README.md  inspect_data.py  postprocess.py  pyproject.toml  run_and_report.py
collimator_transport/: __init__.py  actors.py  batch_worker.py  geometry.py  main.py  physics.py  run.py  source.py
